<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lloyds Banking App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_message">Welcome, owner!</string>
    <string name="current_balance">Current balance: </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_dictionary_entry">Dictionary Entry</string>
    <string name="title_activity_add_payee">Add Payee</string>
    <string name="title_drawer_accounts">Accounts</string>
    <string name="title_drawer_review_payments">Payees</string>
    <string name="title_drawer_transfer">Transfer Money</string>
    <string name="title_drawer_find_atm">Find ATM</string>
    <string name="title_drawer_dictionary">Dictionary &amp; Terms</string>
    <string name="title_drawer_help">Help &amp; Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_drawer_gamification">Achievements</string>
    <string name="action_shop">Shop</string>
    <string name="action_add_payee">Add</string>


    <string-array name="nav_drawer_elements">
        <item>Accounts</item>
        <item>Payees</item>
        <item>Transfer Money</item>
        <item>Find a Branch/ATM</item>
        <item>Dictionary &amp; Terms</item>
        <item>Help &amp; Guide</item>
        <item>Achievements</item>

    </string-array>

    <string name="transfer_from">From</string>
    <string name="transfer_to">To</string>
    <string name="transfer_name">Name</string>
    <string name="account_number">Account No.</string>
    <string name="sort_code">Sort Code</string>
    <string name="transfer_amount">Amount</string>
    <string name="transfer_message">Message</string>
    <string name="transfer_review">Make Transfer</string>
    <string name="lloyds_bank_caps">LLOYDS BANK</string>
    <string name="login">Login</string>
    <string name="login_helper_userid">Enter your user ID</string>
    <string name="login_helper_password">Enter your password</string>
    <string name="image_desc_horselogo">horse logo</string>
    <string name="search_prefix">Search:</string>
    <string name="delete">Delete</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_payee_confirm">Add New Payee</string>
    <string name="description">Description</string>
    <string name="pay_payee_make">Pay Payee</string>
    <string name="pay_account_make">Pay Account</string>
    <string name="transfer_payee">Payee</string>
    <string name="payment_reference">Reference</string>
    <string name="title_activity_shop">ShopActivity</string>

</resources>
