<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="uk.ac.ncl.cs.team16.lloydsbankingapp.Activities.AddPayeeActivity"
    android:background="@color/almost_white">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/desc_layout"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/description_label"
            style="@style/transfer_fragment_style"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_field"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sortcode_layout"
        android:layout_below="@id/desc_layout"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/sort_code"
            android:id="@+id/sort_code_label"
            style="@style/transfer_fragment_style"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sort_code_field"
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/account_layout"
        android:layout_below="@id/sortcode_layout"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="@dimen/label_width"
            android:layout_height="wrap_content"
            android:text="@string/account_number"
            android:id="@+id/account_no_label"
            style="@style/transfer_fragment_style"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/account_no_field"
            android:inputType="number"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_payee_confirm"
        android:id="@+id/addPayeeButtonConfirm"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        style="@style/button_style"/>

</RelativeLayout>
